[profile.release]
strip = true

[profile.dev]
#strip = true
opt-level = 1
overflow-checks = false
incremental = true

[profile.dev.package."*"]
#strip = true
opt-level = 3
overflow-checks = false
incremental = true

[package]
name = "immeritorious"
edition = "2021"

[dependencies]
easer = "0.3.*"
easy-imgui = "0.12.*"
easy-imgui-sys = "0.12.*"
easy-imgui-window = "0.12.*"
easy-imgui-renderer = "0.12.*"
glutin = "0.32.*"
bitflags = "2.6.*"
log ="0.4"
game-loop = { version = "=1.2", features = ["winit"] }
anyhow = "1"
glutin-winit = { version = "0.5", optional = true }
raw-window-handle = "0.6"
arboard = { version = "3", optional = true, default-features = false }
winit = { version = "0.30", features = ["x11", "mint"] }
bevy_ecs = "0.15.*"