[workspace]
resolver = "2"
members = [
  "immeritorious_client",
  "immeritorious_server",
  "immeritorious_common",
]

[profile.release]
strip = true

[profile.dev]
#strip = true
opt-level = 1
overflow-checks = false
incremental = true

[profile.dev.package."*"]
#strip = true
opt-level = 3
overflow-checks = false
incremental = true
