[package]
name = "immeritorious_client"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.*"
ldtk_rust = "0.6.*"
pathfinding = "4.3.*"
serde = "1.0.*"
bincode = "1.3.*"
immeritorious_common = { path = "../immeritorious_common" }
immeritorious_server = { path = "../immeritorious_server" }

[dependencies.bevy]
version = "0.11.*"
default-features = false
features = ["dynamic_linking", "wayland", "bevy_winit", "bevy_asset", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "png", "bevy_ui"]

[dependencies.bevy_ecs_tilemap]
git = "https://github.com/mwbryant/bevy_ecs_tilemap/"
branch = "bevy_0.11"

[dependencies.bevy_renet]
git = "https://github.com/lucaspoffo/renet"
branch = "master"
