[package]
name = "immeritorious_common"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
#bevy_ecs_tilemap = "0.11.*"
serde_derive = "1.0.*"
bevy_renet = "0.0.*"
bincode = "1.3.*"
serde = "1.0.*"

[dependencies.bevy]
version = "0.11.*"
default-features = false
features = ["bevy_asset", "bevy_core_pipeline"]

[dependencies.bevy_ecs_tilemap]
git = "https://github.com/StarArawn/bevy_ecs_tilemap/"
branch = "main"

[features]
dynamic = ["bevy/dynamic_linking"]