[package]
name = "immeritorious_server"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#bevy_ecs_tilemap = "0.11.*"
bevy_renet = "0.0.*"
pathfinding = "4.3.*"
ldtk_rust = "0.6.*"
bincode = "1.3.*"
serde = "1.0.*"
rand = "0.8.*"

immeritorious_common = { path = "../immeritorious_common" }

[dependencies.bevy]
version = "0.11.*"
default-features = false
features = ["bevy_asset", "bevy_core_pipeline"]

[dependencies.bevy_ecs_tilemap]
git = "https://github.com/StarArawn/bevy_ecs_tilemap/"
branch = "main"

[features]
dynamic = ["bevy/dynamic_linking", "immeritorious_common/dynamic"]